name:                ircbrowse
version:             0.1.0.0
synopsis:            IRC channel analysis.
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable ircbrowse
  main-is:           Main.hs
  ghc-options:      -threaded -O2 -Wall -fno-warn-unused-do-bind -fno-warn-name-shadowing
  hs-source-dirs:    src
  build-depends:     base >= 4 && <5,
                     blaze-html,
                     blaze-markup,
                     clogparse,
                     random,
                     curl,
                     time,
                     snap-core,
                     snap-server,
                     snap-app == 0.6.0,
                     mime-mail,
                     text,
                     postgresql-simple,
                     ConfigFile,
                     mtl,
                     network==2.5.0.0,
                     cgi,
                     old-locale,
                     directory,
                     bytestring,
                     filepath,
                     pcre-light,
                     process,
                     data-default,
                     safe,
                     HUnit,
                     aeson,
                     containers,
                     timezone-olson,
                     timezone-series,
                     attoparsec,
                     split,
                     cgi >= 3001.2.2.0
