name:                ircbrowse
version:             0.1.0.0
synopsis:            IRC channel analysis.
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable ircbrowse
  main-is:           Main.hs
  ghc-options:      -threaded -O2 -Wall -fno-warn-unused-do-bind -fno-warn-name-shadowing
  hs-source-dirs:    src
  build-depends:     base >= 4 && <5,
                     blaze-html,
                     blaze-markup,
                     clogparse,
                     random,
                     curl,
                     time,
                     snap-core,
                     snap-server,
                     snap-app,
                     mime-mail,
                     text,
                     postgresql-simple,
                     ConfigFile,
                     mtl,
                     network,
                     network-uri,
                     cgi,
                     old-locale,
                     directory,
                     bytestring,
                     filepath,
                     pcre-light,
                     process,
                     data-default,
                     safe,
                     HUnit,
                     aeson,
                     containers,
                     timezone-olson,
                     timezone-series,
                     attoparsec,
                     split,
                     cgi
  other-modules:
    Control.Monad.IO
    Data.IRC.Znc.Parse
    Data.String.Extra
    Ircbrowse.Blaze
    Ircbrowse.Config
    Ircbrowse.Controllers
    Ircbrowse.Data
    Ircbrowse.Import
    Ircbrowse.Model.Data
    Ircbrowse.Model.Events
    Ircbrowse.Model.Migrations
    Ircbrowse.Model.Nicks
    Ircbrowse.Model.Profile
    Ircbrowse.Model.Quotes
    Ircbrowse.Model.Social
    Ircbrowse.Model.Stats
    Ircbrowse.Monads
    Ircbrowse.Prelude
    Ircbrowse.Server
    Ircbrowse.System
    Ircbrowse.Types
    Ircbrowse.Types.Import
    Ircbrowse.View
    Ircbrowse.View.Browse
    Ircbrowse.View.Calendar
    Ircbrowse.View.Chart
    Ircbrowse.View.Cloud
    Ircbrowse.View.NickCloud
    Ircbrowse.View.NickColour
    Ircbrowse.View.Nicks
    Ircbrowse.View.Overview
    Ircbrowse.View.Profile
    Ircbrowse.View.Social
    Ircbrowse.View.Template
    Sphinx
    Text.Blaze.Bootstrap
    Text.Blaze.Linkify
    Text.Links
