name:                perse
version:             0.1.0.0
synopsis:            IRC channel analysis.
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable perse
  main-is:           Main.hs
  hs-source-dirs:    src
  build-depends:     base >= 4 && <5,
                     clogparse,
                     curl,
                     time,
                     snap-core,
                     snap-server,
                     snap-app >= 0.1.4,
                     mime-mail,
                     text,
                     pgsql-simple,
                     ConfigFile,
                     mtl,
                     blaze-html,
                     network,
                     cgi,
                     GoogleChart

-- executable perse-import-from-tunes
--   main-is:           ImportTunes.hs
--   ghc-options:       -threaded -O2
--   hs-source-dirs:    src
--   build-depends:     base >= 4 && <5,
--                      clogparse,
--                      curl,
--                      time,
--                      snap-core,
--                      snap-server,
--                      snap-app >= 0.1.4,
--                      mime-mail,
--                      text,
--                      pgsql-simple,
--                      ConfigFile,
--                      mtl,
--                      old-locale,
--                      filepath,
--                      directory,
--                      bytestring,
--                      text
